# gobo

./: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .markdownlint.json  .travis.yml  CMakeLists.txt  History.html  History.md  History.txt  License.html  License.md  License.txt  README.md  Readme.md  Readme.txt  Release_notes.html  Release_notes.md  Release_notes.txt  azure-pipelines.yml  build.eant  forum.txt  index.html  install.bat  install.sh  lsp.ecf
.azure/: build.yml  test.yml
.cicd/: before_script.bat  before_script.ps1  before_script.sh  build_delivery.ps1  build_ge.bat  build_ge.ps1  build_ge.sh  extract_release_notes.ps1  install_delivery.ps1  install_ge.ps1  install_ge.sh  install_ise.bat  install_ise.ps1  install_zig.ps1  patch_zig.ps1  set_gobo_version.ps1  test_delivery.ps1  test_ge.ps1
.githooks/: post-checkout  post-commit
.github/: before_script.sh  build_ge.bat  build_ge.sh  install_ge.bat  install_ge.sh  install_ise.sh
.gitlab/: do_it.bat  install_ise.sh
.sourceforge/: build_gobo_delivery.sh  build_gobo_web.sh  git_clone_gobo.sh
.travis/: install_ise.sh
doc/: Readme.txt  build.eant  download.html  gobodoc.rng  index.html  known_bugs.html  (+4 more)
work/bootstrap/: CMakeLists.txt  Readme.txt  bootstrap.bat  bootstrap.sh  geant.c  geant.h  geant1.c  geant2.c  geant3.c  geant4.c  geant5.c  gec.h  gec1.c  gec10.c  gec11.c  gec12.c  gec13.c  gec14.c  gec15.c  gec16.c  gec17.c  gec18.c  gec2.c  gec3.c  gec4.c  gec5.c  gec6.c  gec7.c  gec8.c  gec9.c  gelex.c  gelex.h  gelex1.c  gelex2.c  gepp.c  gepp.h  gepp1.c  gexace.c  gexace.h  gexace1.c  (+7 more)
(+7222 files in other folders)
