FILE(GLOB GEC gec*.c)
ADD_EXECUTABLE(gec ${GEC})

FILE(GLOB GEANT geant*.c)
ADD_EXECUTABLE(geant ${GEANT})

FILE(GLOB GELEX gelex*.c)
ADD_EXECUTABLE(gelex ${GELEX})

FILE(GLOB GEXACE gexace*.c)
ADD_EXECUTABLE(gexace ${GEXACE})

FILE(GLOB GEPP gepp*.c)
ADD_EXECUTABLE(gepp ${GEPP})

FILE(GLOB GEYACC geyacc*.c)
ADD_EXECUTABLE(geyacc ${GEYACC})
